--- a/front/package.json
+++ b/front/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --mode development", 
-    "build": "webpack --mode production"  
+    "start": "live-server",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +14,8 @@
     "html-webpack-plugin": "^5.6.3",
     "live-server": "^1.2.2",
     "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0"
   },
   "dependencies": {
     "axios": "^1.6.8"
