--- a/front/vercel.json
+++ b/front/vercel.json
@@ -1,15 +1,15 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "webpack.config.js",      
-      "use": "@vercel/static-build"   
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/public/$1"   
-    }
-  ]
-}
+    "builds": [
+      {
+        "src": "front/package.json",
+        "use": "@vercel/static-build"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "/front/$1"
+      }
+    ]
+  }
+  
