--- a/front/package.json
+++ b/front/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --mode development", 
-    "build": "webpack --mode production"
+ "start": "live-server",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
